crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__while.py_1.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     while False:
%%         return "unreachable"
%%     else:
%%         return 1

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return #quot;unreachable#quot;\n"]
  block1["return 1\n"]
  block2["while False:
        return #quot;unreachable#quot;
    else:
        return 1\n"]

  start --> block2
  block2 -- "False" --> block0
  block2 -- "else" --> block1
  block1 --> return
  block0 --> return

