crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__while.py_4.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func():
%%     while True:
%%         return 1
%%     else:
%%         return "unreachable"

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 1\n"]
  block1["return #quot;unreachable#quot;\n"]
  block2["while True:
        return 1
    else:
        return #quot;unreachable#quot;\n"]

  start --> block2
  block2 -- "True" --> block0
  block2 -- "else" --> block1
  block1 --> return
  block0 --> return

